Sun Jan 06 12:18:50 2002  Guillaume Morin  <gmorin@gnu.org>

    * Makefile.am: use EXTRA_DIST to include manpage in distribution

Wed Jan 02 21:33:41 2002  Guillaume Morin  <gmorin@gnu.org>

    * stow.in: Stow now only warns the user if a subdirectory
      is unreadable during unstowing.

Wed Jan 02 20:58:05 2002  Guillaume Morin  <gmorin@gnu.org>

    * stow.in: fixed JoinPaths so that subdirs called "0" are
      correctly pushed. Thanks a lot to Gergely Nagy
      <algernon@bonehunter.rulez.org> who patiently helped me to chase 
      this bug.

Sun Dec 30 21:58:25 2001  Guillaume Morin  <gmorin@gnu.org>

    * stow.in: fixed a bug introduced by previous changes when
      Target argument was relative. (thanks to Luca Filipozzi
      <lfilipoz@debian.org> for pointing this out)
	   
Sun Dec 30 18:23:25 2001  Guillaume Morin  <gmorin@gnu.org>

    * stow.in: now requires Perl 5. Use POSIX getcwd instead of broken
      fastcwd. Fixed bug when CommonParent is /. Stow does not remove
      initially empty directories anymore.
	
Sun Dec 30 18:07:51 2001  Guillaume Morin  <gmorin@gnu.org>

    * configure.in: automake fixes (fp_ -> AC, +AC_INIT_AUTOMAKE)

Fri Oct 11 22:09:45 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* stow.html, configure.in: Version 1.3.2.

	* README, stow.texi: Correct the URL again.

Fri Oct 11 18:20:42 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* configure.in: Version 1.3.1.

	* stow.html: Update Stow manual URL.  Mention version 1.3.1.

	* README: Update Stow URL.

	* Makefile.am: stow-manual.html -> manual.html.

	* stow.texi:
	Add a reference to the Stow home page on the GNU web server.  Change
	several occurrences of "which" to "that" for grammatical superiority.

Wed Oct  9 00:34:07 1996  Bob Glickstein  <bobg@hiro.zanshin.com>

	* Makefile.am:
	Add maintainer-only rules for stow-manual.html and stow-manual.texi.

Wed Oct  9 00:32:31 1996  Bob Glickstein  <bobg@hiro.zanshin.com>
