@@ -9,7 +9,10 @@ current working directory.
 Charles Briscoe-Smith <cpbs@debian.org> wrote the fix to prevent 
 stow -D / stow -R removing initially-empty directories.
 
-Adam Lackorzynski <al10@inf.tu-dresden.de> wrote the fix to prevente
+Adam Lackorzynski <al10@inf.tu-dresden.de> wrote the fix which prevents
 the generation of wrong links if there are links in the stow directory.
+
+Anthony R Iano-Fletcher <Anthony.Iano-Fletcher@cbel.cit.nih.gov> 
+contributed the '--subdirs' option.
 
 Stow is currently maintained by Guillaume Morin <gmorin@gnu.org>.
