@@ -3,7 +3,7 @@ dnl Process this file with Autoconf to produce configure
 AC_INIT(stow.in)
 
 PACKAGE=stow
-VERSION=1.3.3
+VERSION=1.3.3pre4
 AM_INIT_AUTOMAKE(stow, $VERSION)
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
